--- a/firmware/.cproject
+++ b/firmware/.cproject
@@ -30,6 +30,16 @@
 							<tool id="de.innot.avreclipse.tool.compiler.winavr.app.debug.499973641" name="AVR Compiler" superClass="de.innot.avreclipse.tool.compiler.winavr.app.debug">
 								<option id="de.innot.avreclipse.compiler.option.debug.level.50471565" name="Generate Debugging Info" superClass="de.innot.avreclipse.compiler.option.debug.level"/>
 								<option id="de.innot.avreclipse.compiler.option.optimize.1936196191" name="Optimization Level" superClass="de.innot.avreclipse.compiler.option.optimize"/>
+								<option id="de.innot.avreclipse.compiler.option.def.729518893" name="Define Syms (-D)" superClass="de.innot.avreclipse.compiler.option.def" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="F_USB=16000000"/>
+									<listOptionValue builtIn="false" value="USE_STATIC_OPTIONS=&quot;(USB_DEVICE_OPT_FULLSPEED | USB_OPT_REG_ENABLED | USB_OPT_AUTO_PLL)&quot;"/>
+									<listOptionValue builtIn="false" value="ARCH=AVR8"/>
+									<listOptionValue builtIn="false" value="USB_DEVICE_ONLY"/>
+									<listOptionValue builtIn="false" value="USE_FLASH_DESCRIPTORS"/>
+									<listOptionValue builtIn="false" value="FIXED_CONTROL_ENDPOINT_SIZE=8"/>
+									<listOptionValue builtIn="false" value="FIXED_NUM_CONFIGURATIONS=1"/>
+									<listOptionValue builtIn="false" value="BOARD=BOARD_ADAFRUITU4"/>
+								</option>
 								<inputType id="de.innot.avreclipse.compiler.winavr.input.1036177180" name="C Source Files" superClass="de.innot.avreclipse.compiler.winavr.input"/>
 							</tool>
 							<tool id="de.innot.avreclipse.tool.cppcompiler.app.debug.2127485080" name="AVR C++ Compiler" superClass="de.innot.avreclipse.tool.cppcompiler.app.debug">
@@ -37,7 +47,7 @@
 								<option id="de.innot.avreclipse.cppcompiler.option.optimize.1386420794" name="Optimization Level" superClass="de.innot.avreclipse.cppcompiler.option.optimize"/>
 							</tool>
 							<tool commandLinePattern="${COMMAND} ${INPUTS} ${FLAGS} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT}" id="de.innot.avreclipse.tool.linker.winavr.app.debug.853437797" name="AVR C Linker" superClass="de.innot.avreclipse.tool.linker.winavr.app.debug">
-								<option id="de.innot.avreclipse.linker.option.otherlinkargs.2040305551" name="Other Arguments" superClass="de.innot.avreclipse.linker.option.otherlinkargs" value="-lm -lprintf_flt -Wl,-u,vfprintf " valueType="string"/>
+								<option id="de.innot.avreclipse.linker.option.otherlinkargs.2040305551" name="Other Arguments" superClass="de.innot.avreclipse.linker.option.otherlinkargs" value="-lm -lprintf_flt -Wl,-u,vfprintf -Wl,--gc-sections" valueType="string"/>
 								<inputType id="de.innot.avreclipse.tool.linker.input.437345033" name="OBJ Files" superClass="de.innot.avreclipse.tool.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -52,6 +62,9 @@
 							<tool id="de.innot.avreclipse.tool.avrdude.app.debug.1390915704" name="AVRDude" superClass="de.innot.avreclipse.tool.avrdude.app.debug"/>
 						</toolChain>
 					</folderInfo>
+					<sourceEntries>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
@@ -85,6 +98,16 @@
 							<tool id="de.innot.avreclipse.tool.compiler.winavr.app.release.1158697772" name="AVR Compiler" superClass="de.innot.avreclipse.tool.compiler.winavr.app.release">
 								<option id="de.innot.avreclipse.compiler.option.debug.level.66775462" name="Generate Debugging Info" superClass="de.innot.avreclipse.compiler.option.debug.level" value="de.innot.avreclipse.compiler.option.debug.level.none" valueType="enumerated"/>
 								<option id="de.innot.avreclipse.compiler.option.optimize.1917292877" name="Optimization Level" superClass="de.innot.avreclipse.compiler.option.optimize" value="de.innot.avreclipse.compiler.optimize.size" valueType="enumerated"/>
+								<option id="de.innot.avreclipse.compiler.option.def.1858024616" name="Define Syms (-D)" superClass="de.innot.avreclipse.compiler.option.def" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="F_USB=16000000"/>
+									<listOptionValue builtIn="false" value="USE_STATIC_OPTIONS=&quot;(USB_DEVICE_OPT_FULLSPEED | USB_OPT_REG_ENABLED | USB_OPT_AUTO_PLL)&quot;"/>
+									<listOptionValue builtIn="false" value="ARCH=AVR8"/>
+									<listOptionValue builtIn="false" value="USB_DEVICE_ONLY"/>
+									<listOptionValue builtIn="false" value="USE_FLASH_DESCRIPTORS"/>
+									<listOptionValue builtIn="false" value="FIXED_CONTROL_ENDPOINT_SIZE=8"/>
+									<listOptionValue builtIn="false" value="FIXED_NUM_CONFIGURATIONS=1"/>
+									<listOptionValue builtIn="false" value="BOARD=BOARD_ADAFRUITU4"/>
+								</option>
 								<inputType id="de.innot.avreclipse.compiler.winavr.input.302408025" name="C Source Files" superClass="de.innot.avreclipse.compiler.winavr.input"/>
 							</tool>
 							<tool id="de.innot.avreclipse.tool.cppcompiler.app.release.2033090320" name="AVR C++ Compiler" superClass="de.innot.avreclipse.tool.cppcompiler.app.release">
@@ -92,7 +115,7 @@
 								<option id="de.innot.avreclipse.cppcompiler.option.optimize.962860707" name="Optimization Level" superClass="de.innot.avreclipse.cppcompiler.option.optimize" value="de.innot.avreclipse.cppcompiler.optimize.size" valueType="enumerated"/>
 							</tool>
 							<tool command="avr-gcc" commandLinePattern="${COMMAND} ${INPUTS} ${FLAGS} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT}" id="de.innot.avreclipse.tool.linker.winavr.app.release.1009793886" name="AVR C Linker" superClass="de.innot.avreclipse.tool.linker.winavr.app.release">
-								<option id="de.innot.avreclipse.linker.option.otherlinkargs.2081551619" name="Other Arguments" superClass="de.innot.avreclipse.linker.option.otherlinkargs" value="-lm -lprintf_flt -Wl,-u,vfprintf " valueType="string"/>
+								<option id="de.innot.avreclipse.linker.option.otherlinkargs.2081551619" name="Other Arguments" superClass="de.innot.avreclipse.linker.option.otherlinkargs" value="-lm -lprintf_flt -Wl,-u,vfprintf -Wl,--gc-sections" valueType="string"/>
 								<inputType id="de.innot.avreclipse.tool.linker.input.2034393541" name="OBJ Files" superClass="de.innot.avreclipse.tool.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -107,6 +130,9 @@
 							<tool id="de.innot.avreclipse.tool.avrdude.app.release.898045020" name="AVRDude" superClass="de.innot.avreclipse.tool.avrdude.app.release"/>
 						</toolChain>
 					</folderInfo>
+					<sourceEntries>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
